--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -1,5 +1,4 @@
 <div class="wrapper ">
-
   <div class="main-panel">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
@@ -37,9 +36,36 @@
     <div class="content">
       <div class="container-fluid">
         <div class="col-12">
-          <app-author></app-author>
-          <app-book></app-book>
-          <app-review></app-review>
+          <div class="card">
+            <div class="card-header card-header-warning">
+              <h4 class="card-title">Books</h4>
+            </div>
+              <div class="card-body table-responsive">
+                <table class="table table-hover">
+                  <thead class="text-warning">
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Publisher</th>
+                  <th>Year of publisher</th>
+                  <th>ISBN</th>
+                  <th>rating</th>
+                  <th>Authors</th>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let book of books">
+                    <td>{{book.id}}</td>
+                    <td>{{book.name}}</td>
+                    <td>{{book.publisher}}</td>
+                    <td>{{book.yearPublisher}}</td>
+                    <td>{{book.isbn}}</td>
+                    <td>{{book.rating}}</td>
+                    <td>{{book.authors}}</td>
+                  </tr>
+
+                  </tbody>
+                </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
