--- a/frontend/src/app/views/review/review.component.html
+++ b/frontend/src/app/views/review/review.component.html
@@ -37,9 +37,31 @@
     <div class="content">
       <div class="container-fluid">
         <div class="col-12">
-          <app-author></app-author>
-          <app-book></app-book>
-          <app-review></app-review>
+          <div class="card">
+            <div class="card-header card-header-warning">
+              <h4 class="card-title">Reviews</h4>
+            </div>
+            <div class="card-body table-responsive">
+              <table class="table table-hover">
+                <thead class="text-warning">
+                <th>ID</th>
+                <th>Commenter Name</th>
+                <th>comment</th>
+                <th>Rating</th>
+                <th>Book</th>
+                </thead>
+                <tbody>
+                <tr *ngFor="let review of reviews">
+                  <td>{{review.id}}</td>
+                  <td>{{review.commenterName}}</td>
+                  <td>{{review.comment}}</td>
+                  <td>{{review.rating}}</td>
+                  <td>{{review.book}}</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
