--- a/frontend/src/assets/css/material-dashboard.css
+++ b/frontend/src/assets/css/material-dashboard.css
@@ -4746,12 +4746,12 @@ tbody.collapse.show {
 }
 
 .navbar-dark .navbar-brand {
-  color: #ffffff;
+  color: #000000;
 }
 
 .navbar-dark .navbar-brand:hover,
 .navbar-dark .navbar-brand:focus {
-  color: #ffffff;
+  color: #000000;
 }
 
 .navbar-dark .navbar-nav .nav-link {
