--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -1,55 +1,23 @@
 <div class="wrapper ">
   <div class="main-panel">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-      <div class="container-fluid">
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/">Main</a>
-          <i class="material-icons">home</i>
-        </div>
-        <button aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler" data-toggle="collapse" type="button">
-        </button>
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/authors">Authors</a>
-          <i class="material-icons">people</i>
-        </div>
-
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/books">Books</a>
-          <i class="material-icons">books</i>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end">
-          <form class="navbar-form">
-            <div class="input-group no-border">
-              <input class="form-control" placeholder="Search..." type="text" value="">
-              <button class="btn btn-white btn-round btn-just-icon" type="submit">
-                <i class="material-icons">search</i>
-                <div class="ripple-container"></div>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <!-- End Navbar -->
     <div class="content">
       <div class="container-fluid">
         <div class="col-12">
           <div class="card">
             <div class="card-header card-header-warning">
               <h4 class="card-title">Books</h4>
+              <p id="availableBooks">Available books</p>
             </div>
               <div class="card-body table-responsive">
-                <table class="table table-hover">
+                <table class="table table-hover" aria-describedby="availableBooks">
                   <thead class="text-warning">
-                  <th>ID</th>
-                  <th>Name</th>
-                  <th>Publisher</th>
-                  <th>Year of publisher</th>
-                  <th>ISBN</th>
-                  <th>rating</th>
-                  <th>Authors</th>
+                  <th id="id">ID</th>
+                  <th id="name">Name</th>
+                  <th id="publisher">Publisher</th>
+                  <th id="yearOfPublisher">Year of publisher</th>
+                  <th id="isbn">ISBN</th>
+                  <th id="rating">rating</th>
+                  <th id="authors">Authors</th>
                   </thead>
                   <tbody>
                   <tr *ngFor="let book of books">
