--- a/frontend/src/app/views/review/review.component.html
+++ b/frontend/src/app/views/review/review.component.html
@@ -1,54 +1,22 @@
 <div class="wrapper ">
 
   <div class="main-panel">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-      <div class="container-fluid">
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/">Main</a>
-          <i class="material-icons">home</i>
-        </div>
-        <button aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler" data-toggle="collapse" type="button">
-        </button>
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/authors">Authors</a>
-          <i class="material-icons">people</i>
-        </div>
-
-        <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/books">Books</a>
-          <i class="material-icons">books</i>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end">
-          <form class="navbar-form">
-            <div class="input-group no-border">
-              <input class="form-control" placeholder="Search..." type="text" value="">
-              <button class="btn btn-white btn-round btn-just-icon" type="submit">
-                <i class="material-icons">search</i>
-                <div class="ripple-container"></div>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <!-- End Navbar -->
     <div class="content">
       <div class="container-fluid">
         <div class="col-12">
           <div class="card">
             <div class="card-header card-header-warning">
               <h4 class="card-title">Reviews</h4>
+              <p id="availableReviews">Available reviews</p>
             </div>
             <div class="card-body table-responsive">
-              <table class="table table-hover">
+              <table class="table table-hover" aria-describedby="availableReviews">
                 <thead class="text-warning">
-                <th>ID</th>
-                <th>Commenter Name</th>
-                <th>comment</th>
-                <th>Rating</th>
-                <th>Book</th>
+                <th id="id">ID</th>
+                <th id="commenterName">Commenter Name</th>
+                <th id="comment">comment</th>
+                <th id="rating">Rating</th>
+                <th id="book">Book</th>
                 </thead>
                 <tbody>
                 <tr *ngFor="let review of reviews">
