--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -1,8 +1,32 @@
 <div class="wrapper ">
-
   <div class="main-panel">
     <div class="content">
       <div class="container-fluid">
+        <div class="row">
+          <div class="col-6">
+            <button class="btn btn-primary" data-toggle="modal" data-target="#createAuthorModal">CREATE</button>
+            <button class="btn btn-danger" data-toggle="modal" data-target="#deleteAuthorModal">DELETE</button>
+          </div>
+          <div class="col-6">
+            <div class="d-flex justify-content-end align-items-end">
+              <div class="dropdown">
+                <button class="btn btn-info dropdown-toggle" type="button" id="dropDownPagination"
+                        data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                  Authors on page
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropDownPagination">
+                  <a class="dropdown-item" href="">10</a>
+                  <a class="dropdown-item" href="">25</a>
+                  <a class="dropdown-item" href="">50</a>
+                </div>
+              </div>
+              <div>
+                <button class="btn btn-info" data-toggle="modal" data-target="#searchAuthorModal">SEARCH</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-12">
           <div class="card">
             <div class="card-header card-header-warning">
@@ -12,6 +36,9 @@
             <div class="card-body table-responsive">
               <table class="table table-hover" aria-describedby="availableAuthors">
                 <thead class="text-warning">
+                <th id="checkBox">
+                  <input class="form-check-inline" type="checkbox" value="" id="checkAll">Mark all
+                </th>
                 <th id="id">ID</th>
                 <th id="name">Name</th>
                 <th id="secondName">Second Name</th>
@@ -19,10 +46,28 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let author of authors">
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                  </td>
                   <td>{{author.id}}</td>
                   <td>{{author.firstname}}</td>
                   <td>{{author.secondName}}</td>
                   <td>{{author.books}}</td>
+                  <td>
+                    <div class="btn-group" role="group">
+                      <button class="btn btn-success btn-sm rounded-top" type="button" data-toggle="modal"
+                              data-target="#updateAuthorModal"
+                              data-placement="top" title="Edit"><em class="fa fa-edit"></em></button>
+                      <button class="btn btn-danger btn-sm rounded-bottom" type="button" data-toggle="modal"
+                              data-target="#deleteAuthorModal"
+                              data-placement="top" title="Delete"><em class="fa fa-trash"></em></button>
+                      <button class="btn btn-info btn-sm rounded-bottom" type="button" data-toggle="modal"
+                              data-target="#infoAuthorModal"
+                              data-placement="top" title="Detail"><em class="fa fa-info"></em></button>
+                    </div>
+                  </td>
                 </tr>
                 </tbody>
               </table>
@@ -36,4 +81,107 @@
   </div>
 </div>
 
+<div class="modal fade" id="createAuthorModal" tabindex="-1" role="dialog" aria-labelledby="createAuthorModal"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <H4 class="modal-title">Create Author</H4>
+        <button class="close" data-dismiss="modal">X</button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="authorName">Name</label>
+          <input type="text" name="name"
+                 class="form-control" id="authorName" placeholder="name" required>
+        </div>
+        <div class="form-group">
+          <label for="authorSecondName">Second name</label>
+          <input type="text" name="yearOfPublisher"
+                 class="form-control" id="authorSecondName" placeholder="second name" required>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-success" data-dismiss="modal">Create</button>
+        <button class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="modal fade" id="updateAuthorModal" tabindex="-1" role="dialog" aria-labelledby="updateAuthorModal"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <H4 class="modal-title">Update Author</H4>
+        <button class="close" data-dismiss="modal">X</button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="updateAuthorName">Name</label>
+            <input type="text" name="name"
+                   class="form-control" id="updateAuthorName" placeholder="name" required>
+          </div>
+          <div class="form-group">
+            <label for="updateAuthorSecondName">Second name</label>
+            <input type="text" name="yearOfPublisher"
+                   class="form-control" id="updateAuthorSecondName" placeholder="second name" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-success" data-dismiss="modal">Save changes</button>
+          <button class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="deleteAuthorModal" tabindex="-1" role="dialog" aria-labelledby="deleteAuthorModal"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <H4 class="modal-title">Delete Author</H4>
+        <button class="close" data-dismiss="modal">X</button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this author?</p>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+          <button class="btn btn-danger" data-dismiss="modal">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="searchAuthorModal" tabindex="-1" role="dialog" aria-labelledby="createAuthorModal"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <H4 class="modal-title">Create Book</H4>
+        <button class="close" data-dismiss="modal">X</button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="searchByName">By name</label>
+          <input type="text" name="name"
+                 class="form-control" id="searchByName" placeholder="name" required>
+        </div>
+        <div class="form-group">
+          <label for="searchBySecondName">By second name</label>
+          <input type="text" name="name"
+                 class="form-control" id="searchBySecondName" placeholder="second name" required>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-success" data-dismiss="modal">Search</button>
+          <button class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
