--- a/frontend/src/assets/css/material-dashboard.css
+++ b/frontend/src/assets/css/material-dashboard.css
@@ -4746,12 +4746,12 @@ tbody.collapse.show {
 }
 
 .navbar-dark .navbar-brand {
-  color: #000000;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-brand:hover,
 .navbar-dark .navbar-brand:focus {
-  color: #000000;
+  color: #ffffff;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -9461,8 +9461,8 @@ a.text-dark:focus {
 
 .btn.btn-primary {
   color: #fff;
-  background-color: #9c27b0;
-  border-color: #9c27b0;
+  background-color: #0a3abb;
+  border-color: #0a3abb;
   box-shadow: 0 2px 2px 0 rgba(156, 39, 176, 0.14), 0 3px 1px -2px rgba(156, 39, 176, 0.2), 0 1px 5px 0 rgba(156, 39, 176, 0.12);
 }
 
@@ -9911,8 +9911,8 @@ a.text-dark:focus {
 
 .btn.btn-danger {
   color: #fff;
-  background-color: #f44336;
-  border-color: #f44336;
+  background-color: #c70f01;
+  border-color: #c70f01;
   box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
 }
 
