--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper ">
   <div class="main-panel">
     <div class="content">
-      <div class="container-fluid">
+      <div class="container-fluid" id="main-container">
         <div class="row">
           <div class="col-6">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#createBookModal">CREATE</button>
+            <button class="btn btn-primary" (click)="onOpenModal('add',$any(null))">CREATE</button>
             <button class="btn btn-danger" data-toggle="modal" data-target="#deleteBookModal">DELETE</button>
           </div>
           <div class="col-6">
@@ -62,15 +62,14 @@
                   <td>{{book.authors}}</td>
                   <td>
                     <div class="btn-group" role="group">
-                      <button class="btn btn-success btn-sm rounded-top" type="button" data-toggle="modal"
-                              data-target="#updateBookModal"
-                              data-placement="top" title="Edit"><em class="fa fa-edit"></em></button>
-                      <button class="btn btn-danger btn-sm rounded-bottom" type="button" data-toggle="modal"
-                              data-target="#deleteBookModal"
-                              data-placement="top" title="Delete"><em class="fa fa-trash"></em></button>
-                      <button class="btn btn-info btn-sm rounded-bottom" type="button" data-toggle="modal"
-                              data-target="#infoBookModal"
-                              data-placement="top" title="Detail"><em class="fa fa-info"></em></button>
+                      <a (click)="onOpenModal('edit',book)" class="btn btn-success btn-sm rounded-top"
+                         data-placement="top" title="Edit"><em
+                        class="fa fa-edit"></em></a>
+                      <a (click)="onOpenModal('delete',book)" class="btn btn-danger btn-sm rounded-bottom"
+                         data-placement="top" title="Delete"><em
+                        class="fa fa-trash"></em></a>
+                      <a (click)="onOpenModal('detail',book)" class="btn btn-info btn-sm rounded-bottom"
+                         data-placement="top" title="Detail"><em class="fa fa-info"></em></a>
                     </div>
                   </td>
                 </tr>
@@ -95,35 +94,34 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" name="name"
-                 class="form-control" id="name" placeholder="name" required>
-        </div>
-        <div class="form-group">
-          <label for="yearOfPublisher">Year of publisher</label>
-          <input type="text" name="yearOfPublisher"
-                 class="form-control" id="yearOfPublisher" placeholder="year of publisher" required>
-        </div>
-        <div class="form-group">
-          <label for="publisher">Publisher</label>
-          <input type="text" name="publisher"
-                 class="form-control" id="publisher" placeholder="publisher" required>
-        </div>
-        <div class="form-group">
-          <label for="isbn">Publisher</label>
-          <input type="text" name="isbn"
-                 class="form-control" id="isbn" placeholder="isbn" required>
-        </div>
-        <div class="form-group">
-          <label for="authors">Authors</label>
-          <input type="text" name="authors"
-                 class="form-control" id="authors" placeholder="authors" required>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-success" data-dismiss="modal">Create</button>
-        <button class="btn btn-danger" data-dismiss="modal">Close</button>
+        <form #addForm="ngForm" (ngSubmit)="createBook(addForm)">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" ngModel name="name" class="form-control" id="name" placeholder="name" required>
+          </div>
+          <div class="form-group">
+            <label for="yearOfPublisher">Year of publisher</label>
+            <input type="text" ngModel name="yearOfPublisher" class="form-control" id="yearOfPublisher"
+                   placeholder="year of publisher">
+          </div>
+          <div class="form-group">
+            <label for="publisher">Publisher</label>
+            <input type="text" ngModel name="publisher" class="form-control" id="publisher" placeholder="publisher"
+                   required>
+          </div>
+          <div class="form-group">
+            <label for="isbn">Publisher</label>
+            <input type="text" ngModel name="isbn" class="form-control" id="isbn" placeholder="isbn" required>
+          </div>
+          <div class="form-group">
+            <label for="authors">Authors</label>
+            <input type="text" ngModel name="authors" class="form-control" id="authors" placeholder="authors" required>
+          </div>
+          <div class="modal-footer">
+            <button [disabled]="addForm.invalid" type="submit" class="btn btn-success">Create</button>
+            <button type="button" id="add-book-form" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -134,39 +132,40 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <H4 class="modal-title">Update Book</H4>
+        <H4 class="modal-title">Update Book {{editBook?.name}}</H4>
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <div class="form-group">
-          <label for="bookName">Name</label>
-          <input type="text" name="name"
-                 class="form-control" id="bookName" placeholder="name" required>
-        </div>
-        <div class="form-group">
-          <label for="yearOfPublisher">Year of publisher</label>
-          <input type="text" name="yearOfPublisher"
-                 class="form-control" id="bookYearPublisher" placeholder="year of publisher" required>
-        </div>
-        <div class="form-group">
-          <label for="publisher">Publisher</label>
-          <input type="text" name="publisher"
-                 class="form-control" id="bookPublisher" placeholder="publisher" required>
-        </div>
-        <div class="form-group">
-          <label for="isbn">Publisher</label>
-          <input type="text" name="isbn"
-                 class="form-control" id="bookIsbn" placeholder="isbn" required>
-        </div>
-        <div class="form-group">
-          <label for="authors">Authors</label>
-          <input type="text" name="authors"
-                 class="form-control" id="bookAuthors" placeholder="authors" required>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-success" data-dismiss="modal">Save changes</button>
-        <button class="btn btn-danger" data-dismiss="modal">Close</button>
+        <form #editForm="ngForm">
+          <div class="form-group">
+            <label for="bookName">Name</label>
+            <input type="text" ngModel="{{editBook?.name}}" name="name" class="form-control" id="bookName"
+                   placeholder="name">
+          </div>
+          <input type="hidden" ngModel="{{editBook?.id}}" name="id" class="form-control" id="id">
+          <div class="form-group">
+            <label for="yearOfPublisher">Year of publisher</label>
+            <input type="text" ngModel="{{editBook?.yearPublisher}}" name="yearOfPublisher" class="form-control"
+                   id="bookYearPublisher"
+                   placeholder="year of publisher">
+          </div>
+          <div class="form-group">
+            <label for="publisher">Publisher</label>
+            <input type="text" ngModel="{{editBook?.publisher}}" name="publisher" class="form-control"
+                   id="bookPublisher" placeholder="publisher">
+          </div>
+          <div class="form-group">
+            <label for="isbn">ISBN</label>
+            <input type="text" ngModel="{{editBook?.isbn}}" name="isbn" class="form-control" id="bookIsbn"
+                   placeholder="isbn">
+          </div>
+
+          <div class="modal-footer">
+            <button (click)="updateBook(editForm.value)" class="btn btn-success">Save changes</button>
+            <button class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button (click)="deleteBook(editBook.id)" class="btn btn-danger" data-dismiss="modal">Delete</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -181,17 +180,36 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete this book?</p>
+        <p>Are you sure you want to delete book {{deletedBook?.name}}</p>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-          <button class="btn btn-danger" data-dismiss="modal">Yes</button>
+          <button (click)="deleteBook(deletedBook.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="searchBook" tabindex="-1" role="dialog" aria-labelledby="createBookModal"
+<div class="modal fade" id="detailBookModal" tabindex="-1" role="dialog" aria-labelledby="detailBookModal"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <H4 class="modal-title">Detail Book {{detailBook?.name}}</H4>
+        <button class="close" data-dismiss="modal">X</button>
+      </div>
+      <div class="modal-body">
+        <div>Name: {{detailBook?.name}}</div>
+        <div>ISBN: {{detailBook?.isbn}}</div>
+        <div>Publisher: {{detailBook?.publisher}}</div>
+        <div>Year of publisher: {{detailBook?.yearPublisher}}</div>
+        <div>Rating: {{detailBook?.rating}}</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="searchBook" tabindex="-1" role="dialog" aria-labelledby="searchBook"
      aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -238,3 +256,4 @@
     </div>
   </div>
 </div>
+
