--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper ">
   <div class="main-panel">
     <div class="content">
-      <div class="container-fluid">
+      <div class="container-fluid" id="main-container">
         <div class="row">
           <div class="col-6">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#createAuthorModal">CREATE</button>
+            <button class="btn btn-primary" (click)="onOpenModal('add',$any(null))">CREATE</button>
             <button class="btn btn-danger" data-toggle="modal" data-target="#deleteAuthorModal">DELETE</button>
           </div>
           <div class="col-6">
@@ -39,10 +39,10 @@
                 <th id="checkBox">
                   <input class="form-check-inline" type="checkbox" value="" id="checkAll">Mark all
                 </th>
-                <th id="id">ID</th>
-                <th id="name">Name</th>
-                <th id="secondName">Second Name</th>
-                <th id="books">Books</th>
+                <th id="tableId">ID</th>
+                <th id="tableName">Name</th>
+                <th id="tableSecondName">Second Name</th>
+                <th id="tableBooks">Books</th>
                 </thead>
                 <tbody>
                 <tr *ngFor="let author of authors">
@@ -52,20 +52,15 @@
                     </div>
                   </td>
                   <td>{{author.id}}</td>
-                  <td>{{author.firstname}}</td>
+                  <td>{{author.firstName}}</td>
                   <td>{{author.secondName}}</td>
                   <td>{{author.books}}</td>
                   <td>
                     <div class="btn-group" role="group">
-                      <button class="btn btn-success btn-sm rounded-top" type="button" data-toggle="modal"
-                              data-target="#updateAuthorModal"
-                              data-placement="top" title="Edit"><em class="fa fa-edit"></em></button>
-                      <button class="btn btn-danger btn-sm rounded-bottom" type="button" data-toggle="modal"
-                              data-target="#deleteAuthorModal"
-                              data-placement="top" title="Delete"><em class="fa fa-trash"></em></button>
-                      <button class="btn btn-info btn-sm rounded-bottom" type="button" data-toggle="modal"
-                              data-target="#infoAuthorModal"
-                              data-placement="top" title="Detail"><em class="fa fa-info"></em></button>
+                      <a (click)="onOpenModal('edit', author)" class="btn btn-info btn-sm rounded-top"
+                         data-placement="top" title="Edit"><em class="fa fa-info"></em></a>
+                      <a (click)="onOpenModal('delete', author)" class="btn btn-danger btn-sm rounded-bottom"
+                         data-placement="top" title="Delete"><em class="fa fa-trash"></em></a>
                     </div>
                   </td>
                 </tr>
@@ -90,20 +85,23 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <div class="form-group">
-          <label for="authorName">Name</label>
-          <input type="text" name="name"
-                 class="form-control" id="authorName" placeholder="name" required>
-        </div>
-        <div class="form-group">
-          <label for="authorSecondName">Second name</label>
-          <input type="text" name="yearOfPublisher"
-                 class="form-control" id="authorSecondName" placeholder="second name" required>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-success" data-dismiss="modal">Create</button>
-        <button class="btn btn-danger" data-dismiss="modal">Close</button>
+        <form #addForm="ngForm" (ngSubmit)="createAuthor(addForm)">
+          <div class="form-group">
+            <label for="authorName">Name</label>
+            <input type="text" ngModel name="firstName"
+                   class="form-control" id="authorName" placeholder="name" required>
+          </div>
+          <div class="form-group">
+            <label for="authorSecondName">Second name</label>
+            <input type="text" ngModel name="secondName"
+                   class="form-control" id="authorSecondName" placeholder="second name" required>
+          </div>
+          <div class="modal-footer">
+            <button [disabled]="addForm.invalid" type="submit" class="btn btn-success">Create</button>
+            <button type="button" id="add-author-form" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+        </form>
+
       </div>
     </div>
   </div>
@@ -114,26 +112,26 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <H4 class="modal-title">Update Author</H4>
+        <H4 class="modal-title">Update Author{{editAuthor?.firstName}}</H4>
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <div class="modal-body">
+        <form #editForm="ngForm">
           <div class="form-group">
             <label for="updateAuthorName">Name</label>
-            <input type="text" name="name"
-                   class="form-control" id="updateAuthorName" placeholder="name" required>
+            <input type="text" ngModel="{{editAuthor?.firstName}}"  name="firstName" class="form-control" id="updateAuthorName" placeholder="name" required>
           </div>
+          <input type="hidden" ngModel="{{editAuthor?.id}}"  name="id" class="form-control" id="id" placeholder="Email">
           <div class="form-group">
             <label for="updateAuthorSecondName">Second name</label>
-            <input type="text" name="yearOfPublisher"
-                   class="form-control" id="updateAuthorSecondName" placeholder="second name" required>
+            <input type="text" ngModel="{{editAuthor?.secondName}}"  name="secondName" class="form-control" id="updateAuthorSecondName" placeholder="second name" required>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal">Save changes</button>
-          <button class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
+          <div class="modal-footer">
+            <button (click)="updateAuthor(editForm.value)" class="btn btn-success" data-dismiss="modal">Save changes</button>
+            <button class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button (click)="deleteAuthor(editAuthor.id)" class="btn btn-danger" data-dismiss="modal">Delete</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -148,10 +146,10 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete this author?</p>
+        <p>Are you sure you want to delete author {{deletedAuthor?.firstName}}?</p>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-          <button class="btn btn-danger" data-dismiss="modal">Yes</button>
+          <button (click)="deleteAuthor(deletedAuthor.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
         </div>
       </div>
     </div>
