small fixes in frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,12 +12,12 @@
                 class="navbar-toggler" data-toggle="collapse" type="button">
         </button>
         <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/authors">Authors</a>
+          <a class="navbar-brand" routerLink="authors">Authors</a>
           <em class="material-icons">people</em>
         </div>
 
         <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/books">Books</a>
+          <a class="navbar-brand" routerLink="books">Books</a>
           <em class="material-icons">books</em>
         </div>
       </div>
