--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -156,12 +156,12 @@
   </div>
 </div>
 
-<div class="modal fade" id="searchAuthorModal" tabindex="-1" role="dialog" aria-labelledby="createAuthorModal"
+<div class="modal fade" id="searchAuthorModal" tabindex="-1" role="dialog" aria-labelledby="searchAuthorModal"
      aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <H4 class="modal-title">Create Book</H4>
+        <H4 class="modal-title">Search By</H4>
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
