--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -212,7 +212,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <H4 class="modal-title">Create Book</H4>
+        <H4 class="modal-title">Search By</H4>
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
